Getting the Role ID while login and also the email is getting sent to the employee mail
Getting the Role ID while login and also the email is getting sent to the employee mail

--- a/SdtReactApi/wwwroot/emailformat/EmployeeMailTemplate.html
+++ b/SdtReactApi/wwwroot/emailformat/EmployeeMailTemplate.html
@@ -45,10 +45,12 @@
                                                                     </p>
                                                                     <p>Your Leave Application has been : *Status*</p>
                                                                     <br />
+                                                                    <b>For :-</b> <br /><br />
                                                                     <b>Leave ID :</b> *LeaveID* <br /><br />
                                                                     <!--<b>Leave Type:</b> *LeaveType* <br /><br />-->
                                                                     <b>Applied For:</b> *LeaveDays* Days<br /><br />
-                                                                    <p>Please take the necessary action accordingly.</p>
+                                                                    <br />
+                                                                    <p>Thank you! Please reach out to your manager for further information.</p>
                                                                 </div>
                                                             </td>
                                                         </tr>
